# filter-coffee-club

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  prek.toml  pyproject.toml  render.yaml
.github/: release.yml
.github/workflows/: ci.yml  release.yml  reset-demo.yml
backend/app/: __init__.py  api.py  calculations.py  catalog_photos.py  config.py  db.py  demo.py  main.py  migrations.py  models.py  observability.py  schemas.py  security.py  seeds.py
frontend/: .prettierignore  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.d.ts  app.html  styles.css
frontend/src/lib/: AnalyticsScatterPlot.svelte  CatalogCard.svelte  CatalogMetrics.svelte  CatalogPhoto.svelte  CatalogUsageSummary.svelte  CoffeeFields.svelte  CoffeeTastingAnalysis.svelte  ConfirmDialog.svelte  DripperFields.svelte  FilterFields.svelte  FlavorRadar.svelte  GrinderFields.svelte  Logo.svelte  NumberStepper.svelte  PhotoPicker.svelte  PinPad.svelte  ProfileLink.svelte  RatingComparison.svelte  RatingMetrics.svelte  RecentBrews.svelte  api.ts  catalog.ts  device.ts  types.ts  (+1 more)
frontend/tests-e2e/: analytics.spec.ts  club-flow.spec.ts
migrations/: env.py
migrations/versions/: 5b0f2ea51d47_add_catalog_photos.py  7711da448462_initial_schema.py  a24f901ce18b_add_pin_change_required.py  d8f31b28e910_add_login_throttle_state.py
scripts/: check_bundle.py  check_generated_api.py  e2e_server.py  export_openapi.py  git-lfs-pre-push.sh  start.sh
tests/: test_api.py  test_calculations.py
(+16 files in other folders)
