[project]
name = "filter-coffee-club"
version = "0.1.0"
description = "A lightweight pour-over brewing tracker for the Filter Coffee Club."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "argon2-cffi>=23.1,<26",
  "fastapi>=0.115,<1",
  "pillow>=11.0,<13",
  "pillow-heif>=0.20,<2",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "segno>=1.6,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
app = ["demo_assets/catalog/*.webp"]

[dependency-groups]
dev = [
  "conventional-pre-commit>=4.4,<5",
  "httpx>=0.27,<1",
  "prek>=0.4.8,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
